--- a/daily.html
+++ b/daily.html
@@ -58,7 +58,7 @@
     <div class="relative z-10 max-w-4xl mx-auto p-4 md:p-8 min-h-screen flex flex-col">
         
         <!-- Header -->
-        <header class="flex flex-col md:flex-row justify-between items-center mb-8 gap-6 theme-text">
+        <header class="flex flex-col md:flex-row justify-between items-center mb-6 gap-6 theme-text">
             
             <!-- Identity -->
             <div class="flex items-center gap-4 w-full md:w-auto">
@@ -89,19 +89,21 @@
             </div>
         </header>
 
-        <!-- Stats & Reset -->
-        <div id="stats-panel" class="mb-6 flex justify-between items-center p-2 rounded-xl border shadow-sm backdrop-blur-md transition-colors duration-500 w-full md:w-auto self-end md:absolute md:top-8 md:right-[35%] lg:right-[30%] hidden md:flex">
-             <div class="px-4 border-r border-gray-400/30 text-center">
-                <div class="text-[10px] uppercase font-bold opacity-60">Level</div>
-                <div id="level-display" class="font-bold text-indigo-500 text-xl">1</div>
-             </div>
-             <div class="px-4 text-center">
-                <div class="text-[10px] uppercase font-bold opacity-60">XP</div>
-                <div id="xp-display" class="font-bold text-green-500 text-xl">0</div>
-             </div>
-             <button onclick="resetDay()" class="p-2 hover:bg-white/10 rounded-lg transition-colors ml-2" title="Reset Day">
-                <i data-lucide="target" class="w-4 h-4 opacity-50"></i>
-             </button>
+        <!-- Stats Panel (Moved to dedicated row above progress bar) -->
+        <div class="flex justify-end mb-2">
+            <div id="stats-panel" class="flex items-center gap-2 p-1.5 rounded-lg border shadow-sm backdrop-blur-md transition-colors duration-500 bg-white/20 border-white/30 hover:bg-white/30">
+                <div class="px-3 border-r border-gray-400/30 text-center">
+                   <div class="text-[9px] uppercase font-bold opacity-70">Level</div>
+                   <div id="level-display" class="font-bold text-indigo-500 text-lg leading-none">1</div>
+                </div>
+                <div class="px-3 text-center">
+                   <div class="text-[9px] uppercase font-bold opacity-70">XP</div>
+                   <div id="xp-display" class="font-bold text-green-500 text-lg leading-none">0</div>
+                </div>
+                <button onclick="resetDay()" class="p-1.5 hover:bg-white/10 rounded-md transition-colors ml-1" title="Reset Day">
+                   <i data-lucide="target" class="w-4 h-4 opacity-50"></i>
+                </button>
+           </div>
         </div>
 
         <!-- Progress Bar -->
